# Zinz-Server

./: Cargo.toml  README.md
public/: index.html  script.js
src/: main.rs
